# gmath

./: .clang-format  .gitignore  CMakeLists.txt  README.md  xmake.lua
cmake/: sanitizers.cmake  warnings.cmake
include/gmath/: array.hpp  array_algorithms.hpp  base.hpp  constants.hpp  debug.hpp  formatting.hpp  geometry.hpp  numeric_utils.hpp  units.hpp  utils.hpp  vec.hpp
include/gmath/geometry/: line.hpp  normal3.hpp  plane.hpp  point.hpp
include/gmath/matrix/: mat2.hpp  mat3.hpp  mat4.hpp  matrix.hpp  matrix_base.hpp
include/gmath/transform/: transform2D.hpp  transform3D.hpp
include/gmath/vector/: geometric_vector.hpp  octahedral_vector.hpp  unit_vector.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vec_base.hpp  vecn.hpp
src/: CMakeLists.txt  base.hpp  constants.hpp  formatting.hpp  geometry.hpp  mat.hpp  units.hpp  vec.hpp
src/geometry/: line.cpp  line.hpp  normal3.hpp  plane.cpp  plane.hpp  point.hpp
src/matrix/: mat2.cpp  mat2.hpp  mat3.cpp  mat3.hpp  mat4.cpp  mat4.hpp  matrix.hpp  matrix_base.hpp
src/transform/: transform2D.cpp  transform2D.hpp  transform3D.cpp  transform3D.hpp
src/vector/: normal3.hpp  octahedral_vector.cpp  octahedral_vector.hpp  unit_vector.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vec_base.hpp  vecn.hpp
tests/: CMakeLists.txt  array_algorithms.cpp  formatting.cpp  geometry.cpp  mat.cpp  numeric_utils.cpp  static_checks.cpp  test.hpp  transforms.cpp  units.cpp  vec.cpp
